--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,15 +1,13 @@
-{% extends "scaffolds/base.html" %}
+{% extends 'scaffolds/base.html' %}
+{% block title %} Django CMS {% endblock %}
 
 {% block content %}
-    <h1>這是使用模板繼承產生的</h1>
-    {% for post in posts %} 
-    <a href="post/{{post.slug}}">
-        <p class="post_title"> {{post.title}} </p>
-    </a>
-    {%comment%}<p class="post_title"> {{ post.title }}</p>
-    <p class="post_body"> {{ post.content }}</p>
-    <p class="post_date"> {{ post.pub_date }}</p>
-    {%endcomment%}
+{% include 'components/page.header.html'%}
+<div class="app-content">
+    {% for post in posts %}
+        {% include "components/article.card.html" with post=post showReadMore=True %}
     {% endfor %}
+</div> 
+{% endblock %}
 
-{% endblock %}        
+{% block js_script %}{% endblock %}
