--- a/templates/pages/post.html
+++ b/templates/pages/post.html
@@ -1,10 +1,14 @@
-{% extends "scaffolds/base.html" %}
+{% extends 'scaffolds/base.html' %}
+{% with hasPageTitle=True pageTitle="FUCK" %} {% endwith %}
+{% block title %} Django CMS {% endblock %}
+
 
 {% block content %}
-<h1>{{post.title}}--由模板產生<h1>
-    <hr>
-    <p class="post_body"> {{ post.content }}</p>
-    <p class="post_date"> {{ post.pub_date }}</p>
-    <hr>
+{% include 'components/page.header.html' with hasPageTitle=True pageTitle="貼文"%}
+<div class="app-content">
+    {% include "components/article.card.html" with post=post %}
+    <h3><a href='/'> 回首頁 </a></h3>
+</div> 
+{% endblock %}
 
-{% endblock %}        
+{% block js_script %}{% endblock %}
