--- a/templates/components/article.card.html
+++ b/templates/components/article.card.html
@@ -6,10 +6,14 @@
                 <div class="card-tools"> <button type="button" class="btn btn-tool" data-lte-toggle="card-collapse" title="Collapse"> <i data-lte-icon="expand" class="bi bi-plus-lg"></i> <i data-lte-icon="collapse" class="bi bi-dash-lg"></i> </button> <button type="button" class="btn btn-tool" data-lte-toggle="card-remove" title="Remove"> <i class="bi bi-x-lg"></i> </button> </div>
             </div>
             <div class="card-body">
-                {{ post.content }}
+<!--              {{ post.content }} --> 
                 {% if showReadMore %}
+                    {{ post.content | truncatechars:100 }}
                     <br>
                     <a href="post/{{post.slug}}"> 閱讀更多... </a>
+                {%else%}
+                    {% load markdown_tag %}                             <!-- 加入這行 -->
+                    {{ post.content | markdown | safe | linebreaks }}   <!-- 修改此處 -->       
                 {% endif %}
             </div> <!-- /.card-body -->
             <div class="card-footer"> 發表時間：{{ post.pub_date }}</div> <!-- /.card-footer-->
