--- a/templates/post.html
+++ b/templates/post.html
@@ -25,7 +25,7 @@
     <body>
         <h1>{{post.title}}<h1>
         <hr>
-        <p class="post_body"> {{ post.content }}</p>
+        <p class="post_body"> {{ post.content | linebreaks }}</p>
         <p class="post_date"> {{ post.pub_date }}</p>
         <hr>
 
